fixes wrap for alert description

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
 .material-symbols-outlined {
   /* min-width: 50px; */
   font-family: var(--icon-font);
-  font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 48;
+  font-variation-settings: "FILL" 0, "wght" 700, "GRAD" 0, "opsz" 48;
   padding-right: 0.5em;
 }
 
